[gd_scene load_steps=5 format=3 uid="uid://s5s2r57irkoy"]

[ext_resource type="Script" path="res://player/player.gd" id="1_dqrc4"]
[ext_resource type="Texture2D" uid="uid://udmyug0tshqj" path="res://player/sprites/kazuha_final.png" id="2_6apvk"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ag20e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_6apvk")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8w7qm"]
size = Vector2(108, 148)

[node name="Player" type="Area2D"]
script = ExtResource("1_dqrc4")
dashSpeed = 1000

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -1)
scale = Vector2(0.253999, 0.253999)
sprite_frames = SubResource("SpriteFrames_ag20e")

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(1.90735e-06, -1.90735e-06)
shape = SubResource("RectangleShape2D_8w7qm")

[node name="TimersBasic" type="Node2D" parent="."]

[node name="TimerDash" type="Timer" parent="TimersBasic"]
wait_time = 0.25
one_shot = true

[node name="TimerDashPerfect" type="Timer" parent="TimersBasic"]
wait_time = 0.1
one_shot = true

[node name="TimerDashCD" type="Timer" parent="TimersBasic"]
wait_time = 0.2
one_shot = true

[node name="TimerGuardPerfect" type="Timer" parent="TimersBasic"]
wait_time = 0.1
one_shot = true

[node name="TimerGuardCD" type="Timer" parent="TimersBasic"]
wait_time = 0.5
one_shot = true

[node name="TimerInvulnerability" type="Timer" parent="TimersBasic"]
wait_time = 2.0
one_shot = true

[node name="TimerSlowMo" type="Timer" parent="TimersBasic"]
wait_time = 2.0

[node name="TimersAttack" type="Node2D" parent="."]

[node name="TimerAttackHitscan" type="Timer" parent="TimersAttack"]
wait_time = 0.05
one_shot = true

[node name="TimerAttackLinger" type="Timer" parent="TimersAttack"]
wait_time = 0.15
one_shot = true

[node name="TimerAttackCD" type="Timer" parent="TimersAttack"]
wait_time = 0.133
one_shot = true

[node name="TimersSkill0" type="Node2D" parent="."]

[node name="TimerSkill0Charge" type="Timer" parent="TimersSkill0"]
wait_time = 2.0
one_shot = true

[node name="TimerSkill0BuildUp" type="Timer" parent="TimersSkill0"]
wait_time = 0.2
one_shot = true

[node name="TimerSkill0Hitscan" type="Timer" parent="TimersSkill0"]
wait_time = 0.05
one_shot = true

[node name="TimerSkill0Linger" type="Timer" parent="TimersSkill0"]
wait_time = 0.25
one_shot = true

[node name="TimerSkill0CD" type="Timer" parent="TimersSkill0"]
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="TimersBasic/TimerDash" to="." method="_on_timer_dash_timeout"]
[connection signal="timeout" from="TimersBasic/TimerDashPerfect" to="." method="_on_timer_dash_perfect_timeout"]
[connection signal="timeout" from="TimersBasic/TimerDashCD" to="." method="_on_timer_dash_cd_timeout"]
[connection signal="timeout" from="TimersBasic/TimerGuardPerfect" to="." method="_on_timer_guard_perfect_timeout"]
[connection signal="timeout" from="TimersBasic/TimerGuardCD" to="." method="_on_timer_guard_cd_timeout"]
[connection signal="timeout" from="TimersBasic/TimerInvulnerability" to="." method="_on_timer_invulnerability_timeout"]
[connection signal="timeout" from="TimersBasic/TimerSlowMo" to="." method="_on_timer_slow_mo_timeout"]
[connection signal="timeout" from="TimersAttack/TimerAttackHitscan" to="." method="_on_timer_attack_hitscan_timeout"]
[connection signal="timeout" from="TimersAttack/TimerAttackLinger" to="." method="_on_timer_attack_linger_timeout"]
[connection signal="timeout" from="TimersAttack/TimerAttackCD" to="." method="_on_timer_attack_cd_timeout"]
[connection signal="timeout" from="TimersSkill0/TimerSkill0Charge" to="." method="_on_timer_skill_0_charge_timeout"]
[connection signal="timeout" from="TimersSkill0/TimerSkill0BuildUp" to="." method="_on_timer_skill_0_build_up_timeout"]
[connection signal="timeout" from="TimersSkill0/TimerSkill0Hitscan" to="." method="_on_timer_skill_0_hitscan_timeout"]
[connection signal="timeout" from="TimersSkill0/TimerSkill0Linger" to="." method="_on_timer_skill_0_linger_timeout"]
[connection signal="timeout" from="TimersSkill0/TimerSkill0CD" to="." method="_on_timer_skill_0_cd_timeout"]
